Wrap long CodeView lines to fix comment boxes (#1201)

--- a/src/components/CodeView/styles.module.scss
+++ b/src/components/CodeView/styles.module.scss
@@ -55,6 +55,10 @@
   margin: 0;
 }
 
+code.innerHighlightedCode {
+  white-space: pre-wrap;
+}
+
 .linterMessages {
   padding-top: 1rem;
 }
